refactor(userService): refactor saveProfileImg